feat: add incidents support
